# VL53L5CX_esphome

./: .editorconfig  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  example.yaml
components/vl53l5cx/: __init__.py  platform.cpp  platform.h  vl53l5cx.cpp  vl53l5cx.h  vl53l5cx_api.cpp  vl53l5cx_api.h  vl53l5cx_api_wrapper.h  vl53l5cx_buffers.h  vl53l5cx_child.h  vl53l5cx_plugin_detection_thresholds.cpp  vl53l5cx_plugin_detection_thresholds.h  vl53l5cx_plugin_motion_indicator.cpp  vl53l5cx_plugin_motion_indicator.h  vl53l5cx_plugin_xtalk.cpp  vl53l5cx_plugin_xtalk.h
components/vl53l5cx/sensor/: __init__.py  vl53l5cx_sensor.cpp  vl53l5cx_sensor.h
components/vl53l5cx/text_sensor/: __init__.py  uncompng.c  vl53l5cx_text_sensor.cpp  vl53l5cx_text_sensor.h
components/vl53l_mz/: __init__.py  vl53l5cx_api_wrapper.h  vl53l7cx_api_wrapper.h  vl53l8cx_api_wrapper.h  vl53l_mz.cpp  vl53l_mz.h  vl53l_mz_api_wrapper.h  vl53l_mz_child.h  vl53l_mz_const.h
components/vl53l_mz/sensor/: __init__.py  vl53l_mz_sensor.cpp  vl53l_mz_sensor.h
components/vl53l_mz/text_sensor/: __init__.py  vl53l_mz_text_sensor.cpp  vl53l_mz_text_sensor.h
test/: test.sh  test_defaults.yaml  test_esp_arduino.yaml  test_esp_idf.yaml  test_integration_time.yaml  test_mixed_sensors.yaml  test_multiple_sensors.yaml  test_polling.yaml  test_resolution_4x4.yaml  test_resolution_8x8.yaml  test_rp2040_arduino.yaml  test_sensor_zone_modes.yaml  test_sharpening.yaml  test_text_sensor_formats.yaml  test_xtalk_calibration_data.yaml  test_xtalk_calibration_run.yaml
test/vl53l5cx/: test_defaults.yaml  test_esp_arduino.yaml  test_esp_idf.yaml  test_integration_time.yaml  test_multiple_sensors.yaml  test_polling.yaml  test_resolution_4x4.yaml  test_resolution_8x8.yaml  test_rp2040_arduino.yaml  test_sensor_zone_modes.yaml  test_sharpening.yaml  test_text_sensor_formats.yaml  test_xtalk_calibration_data.yaml  test_xtalk_calibration_run.yaml
test/vl53l7cx/: test_defaults.yaml  test_esp_arduino.yaml  test_esp_idf.yaml  test_integration_time.yaml  test_multiple_sensors.yaml  test_polling.yaml  test_resolution_4x4.yaml  test_resolution_8x8.yaml  test_rp2040_arduino.yaml  test_sensor_zone_modes.yaml  test_sharpening.yaml  test_text_sensor_formats.yaml  test_xtalk_calibration_data.yaml  test_xtalk_calibration_run.yaml
test/vl53l8cx/: test_defaults.yaml  test_esp_arduino.yaml  test_esp_idf.yaml  test_integration_time.yaml  test_multiple_sensors.yaml  test_polling.yaml  test_resolution_4x4.yaml  test_resolution_8x8.yaml  test_rp2040_arduino.yaml  test_sensor_zone_modes.yaml  test_sharpening.yaml  test_text_sensor_formats.yaml  test_xtalk_calibration_data.yaml  test_xtalk_calibration_run.yaml
